<resources>
    <string name="app_name">Task</string>

    <!-- Generics -->
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_inform_your_email">Informe seu e-mail</string>
    <string name="text_inform_your_password">Informe sua senha</string>
    <string name="text_create_account">Criar conta</string>
    <string name="text_recover_account">Recuperar conta</string>

    <string name="text_ok">Ok</string>
    <string name="text_success">Sucesso</string>

    <!-- LoginFragment -->
    <string name="text_button_login_fragment">Login</string>

    <!-- RegisterFragment -->
    <string name="text_button_register_fragment">Criar conta</string>

    <!-- RecoverAccountFragment -->
    <string name="success_recover_email_msg">Enviamos um e-mail de recuperação de senha para \"%1$s\"</string>
    <string name="text_button_enviar">Enviar</string>

    <!-- ItemAdapter -->
    <string name="back_button_content_description">Botão para retornar a tarefa ao status anterior</string>
    <string name="next_button_content_description">Botão para transferir a tarefa ao próximo status</string>
    <string name="remove_button_text">Excluir</string>
    <string name="edit_button_text">Editar</string>
    <string name="details_button_text">Detalhar</string>

    <!-- TodoFragment -->
    <string name="text_todo">A fazer</string>
    <string name="loading_todo_tasks">Carregando tarefas <b>a fazer</b>…</string>
    <string name="text_info_no_tasks_found_with_todo_status">Nenhuma tarefa encontrada com o status <b>a fazer</b></string>
    <string name="error_getting_todo_tasks_list">Erro ao obter lista de tarefas <b>a fazer</b></string>
    <string name="add_task_button_content_description">Botão para adicionar tarefa</string>

    <!-- DoingFragment -->
    <string name="text_doing">Fazendo</string>
    <string name="loading_doing_tasks">Carregando tarefas <b>fazendo</b>…</string>
    <string name="text_info_no_tasks_found_with_doing_status">Nenhuma tarefa encontrada com o status <b>fazendo</b></string>
    <string name="error_getting_doing_tasks_list">Erro ao obter lista de tarefas <b>fazendo</b></string>

    <!-- DoneFragment -->
    <string name="text_done">Feitas</string>
    <string name="loading_done_tasks">Carregando tarefas <b>feitas</b>…</string>
    <string name="text_info_no_tasks_found_with_done_status">Nenhuma tarefa encontrada com o status <b>feita</b></string>
    <string name="error_getting_done_tasks_list">Erro ao obter lista de tarefas <b>feitas</b></string>

    <!-- Tasks List -->
    <string name="text_info_no_task_registered">Nenhuma tarefa cadastrada</string>
    <string name="msg_success_delete_task">Tarefa excluída com sucesso</string>
    <string name="msg_success_edit_task">Tarefa alterada com sucesso</string>

    <!-- New/Add Task Fragment -->
    <string name="text_add_new_task_title">Incluir tarefa</string>
    <string name="text_edit_task_title">Editar tarefa</string>
    <string name="text_task_description">Descrição</string>
    <string name="text_hint_task">Criar alguma tarefa</string>
    <string name="text_status_task">Status</string>
    <string name="text_save_button">Gravar</string>

    <string name="message_on_complete_add_task">Tarefa incluída com sucesso</string>
    <string name="message_on_complete_edit_task">Tarefa alterada com sucesso</string>
    <string name="message_on_complete_delete_task">Tarefa excluída com sucesso</string>

    <string name="error_on_failure_add_task">Erro ao incluir a tarefa. Motivo: %1$s</string>
    <string name="error_on_failure_edit_task">Erro ao alterar a tarefa. Motivo: %1$s</string>
    <string name="error_on_failure_delete_task">Erro ao excluir a tarefa. Motivo: %1$s</string>

    <string name="error_empty_text_description">Informe a descrição da tarefa</string>

    <!-- Generic errors -->
    <string name="generic_error_try_later">Ocorreu um erro. Por favor tente novamente mais tarde</string>

    <!-- Firebase Authentication Errors -->
    <string name="fb_auth_error_account_not_registered">Nenhuma conta encontrada com este e-mail</string>
    <string name="fb_auth_error_invalid_email">Insira um e-mail válido</string>
    <string name="fb_auth_error_invalid_password">Senha inválida, tente novamente</string>
    <string name="fb_auth_error_email_already_in_use">Este e-mail já está em uso</string>
    <string name="fb_auth_error_strong_password">A senha fornecida é inválida. Senhas devem ter ao menos 6 caracteres</string>

    <!-- BottomSheet -->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>
</resources>