<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTaskTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Otimizar códigos do app para ficar mais rápido. Otimizar códigos do app para ficar mais rápido. Otimizar códigos do app para ficar mais rápido." />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_button_text"
                android:textColor="@color/white"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:background="@drawable/bg_task"
                android:backgroundTint="@color/color_delete"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toStartOf="@+id/btnEdit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnEdit" />

            <TextView
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:text="@string/edit_button_text"
                android:textColor="@color/white"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:background="@drawable/bg_task"
                android:backgroundTint="@color/color_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnDetails"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDelete"
                app:layout_constraintTop_toBottomOf="@+id/textTaskTitle" />

            <TextView
                android:id="@+id/btnDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_button_text"
                android:textColor="@color/white"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:background="@drawable/bg_task"
                android:backgroundTint="@color/color_details"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnEdit"
                app:layout_constraintTop_toTopOf="@+id/btnEdit" />

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button_content_description"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnEdit"
                tools:tint="@color/color_default" />

            <ImageButton
                android:id="@+id/ibNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next_button_content_description"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnEdit"
                tools:tint="@color/color_default" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>